# asr-project

./: CMakeLists.txt  Readme.md  conanfile.txt
include/: asr.h
include/geometries/: geometry_generators.h
include/math/: sphere.h
include/objects/: object.h
tests/: box_test.cpp  circle_test.cpp  first_triangle_test.cpp  general_usage_test.cpp  material_properties_test.cpp  normal_mapping_test.cpp  rectangle_test.cpp  scene_graph_test.cpp  shader_test.cpp  sphere_test.cpp  textured_plane_test.cpp  transform1_test.cpp  transform2_test.cpp  triangle_test.cpp  window_test.cpp
